--- a/whatisnewdialoglibrary/src/main/res/values/strings.xml
+++ b/whatisnewdialoglibrary/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="version_name">1.0.0</string>
+    <string name="version_name" translatable="false">1.0.0</string>
     <string name="new_features_dialog_title">What Is New In This Version!</string>
     <string name="ok">OK</string>
     <string name="close">Close</string>
