--- a/whatisnewdialog-sample/src/main/res/values/strings.xml
+++ b/whatisnewdialog-sample/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">WhatIsNew</string>
+    <string name="app_name" translatable="false">WhatIsNew</string>
 </resources>
